--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html>
 <head>
 	<title>AdminPanel</title>
+
+	<script type="text/javascript" src="jquery.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>	
+	<script type="text/javascript" src="script.js"></script>	
+	
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css">
 	<link rel="stylesheet" href="footer.css" type="text/css">
 	<link rel="stylesheet" href="style.css" type="text/css">
 	
-	<script type="text/javascript" src="jquery.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+
 	
 </head>
 
@@ -16,16 +20,23 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Hi-Tech Hospital</a>
+      <a class="navbar-brand" href="index.html" style="color:#5c6bc0;">Hi-Tech Hospital</a>
+    </div>
+    <div>
+    <ul class="nav navbar-nav navbar-left">
+        <li><a href="DoctorViewVideo.html" id="doctorView" onClick="pageChange(this.id)" style="color:#5c6bc0"><span class="glyphicon glyphicon-user"></span>Doctor</a></li>
+      </ul>
     </div>
     <div>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="admin.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="login.html" ><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="signup.html" id="register" onClick="pageChange(this.id)" style="color:#5c6bc0"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="admin.html" style="color:#5c6bc0"><span class="glyphicon glyphicon-log-in"></span> Admin</a></li>
+        <li><a href="login.html" style="color:#5c6bc0"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
     </div>
   </div>
 </nav>
+
 <div class="container" align="center" id="reset">
 		<div class="jumbotron" align="center">
 			
@@ -38,6 +49,7 @@
 		<div class="col-sm-4"></div>
 		<div class="col-sm-4"></div>	
 		</div>
+
 			
 </div>
 
@@ -46,18 +58,5 @@
 	<p id="bottom">Hi-Tech Hospital 2015</p>	
 </div>
 
-<script>
-	function pageChange() {
-		window.open("signup.html",'_parent');
-	}
-	function setVisibility(id,visibility) {
-		
-		var el = document.getElementById(id);
-		alert(el)
-		var el1 = document.getElementById('opt');
-			el1.style.display='none';		
-        el.style.display = visibility;
-	}
-</script>
 </body>
 </html>
