--- a/login.html
+++ b/login.html
@@ -3,24 +3,24 @@
 <head>
 	<title>TestLogIn</title>
 
+	<script type="text/javascript" src="jquery.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>	
+	<script type="text/javascript" src="script.js"></script>	
 <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 <link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css">
 <link rel="stylesheet" href="footer.css" type="text/css">
 <link rel="stylesheet" href="style.css" type="text/css">
-
-<script type="text/javascript" src="jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
 
 </head>
 <body>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#" style="color:#5c6bc0;">Hi-Tech Hospital</a>
+      <a class="navbar-brand" href="index.html" style="color:#5c6bc0;">Hi-Tech Hospital</a>
     </div>
     <div>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" id="signUp" onClick="pageChange(this.id)" style="color:#5c6bc0"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="#" id="register" onClick="pageChange(this.id)" style="color:#5c6bc0"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
         
       </ul>
     </div>
@@ -44,22 +44,13 @@
 		<p>Forgot Password <a href="forgot.html">forgot Password?</a></p>
 		</div>	
 	</div>
+<div class="row" id="foot">
+<div class="col-sm-12">
 	<div class="foot">
 		<p id="bottom">Hi-Tech Hospital 2015</p>	
 	</div>
-<script>
-	function pageChange(id) {
-		
-		window.open("signup.html",'_parent');
-	}
-	function setVisibility(id,visibility) {
-		
-		var el = document.getElementById(id);
-		alert(el)
-		var el1 = document.getElementById('opt');
-			el1.style.display='none';		
-        el.style.display = visibility;
-	}
-</script>
+</div>
+</div>
+
 </body>
 </html>
