--- a/admin.html
+++ b/admin.html
@@ -1,57 +1,91 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>AdminPanel</title>
+	<title>Hi-Tech Hospital</title>
 	
-	<script type="text/javascript" src="jquery.min.js"></script>
+	<script type="text/javascript" src="jquery-1.9.1.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
-	
 
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-	<link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css">
-	<link rel="stylesheet" href="footer.css" type="text/css">
+	<link rel="stylesheet" href="css/flat-ui.min.css" type="text/css">
+	<link rel="stylesheet" href="css/flat-ui.css" type="text/css">
 	<link rel="stylesheet" href="style.css" type="text/css">
-	
-
+	<!--<link rel="stylesheet" href="Flat-UI-master/dist/css/flat-ui.min.css" type="text/css">-->
 	
 </head>
-
+	
 <body>
+<div class="wrapper">
+<!--<div id="header"></div>-->
+<div id="header">
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="index.html">Hi-Tech Hospital</a>
-    </div>
-    <div>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> User</a></li>
-        <li><a href="login.html" ><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<div class="container" align="center" id="opt">
-		<div class="jumbotron" id="opt" align="center">
-			<div>
-				<ul class="nav">
-        			<li><button type="button" onClick="pageChange(this.id)" class="btn btn-primary btn-block" id="register">Register</button></li>
-        			<li><button type="button" onClick="pageChange(this.id)" class="btn btn-primary btn-block" id="updateprofile">UpdateProfile</button></li>
-        			<li><button type="button" onClick="pageChange(this.id)" class="btn btn-primary btn-block" id="resetpassword">ResetPassword</button></li>
-      		</ul>
-			</div>
-			<hr>
-			<ul style="text-align:left;font-size: 10px; margin-bottom: 10px;">
-			<li>Admin will be responsibel for any thing relating to the security of the system.</li>
-			<li>Do not over estimate the power of a common man.</li>
-			<li>Verify user details on registration.</li>
-			<li>Developers of this system will not be responsible for the maintainance of the system.</li>			
-			</ul>
-		</div>	
-</div>	
 
-<div class="foot">
-	<p id="bottom">Hi-Tech Hospital 2015</p>	
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+	
+	<!-- for small display -->
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Hi-Tech Hospital</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">About</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="admin.html">Admin</a></li>
+            <li><a href="doctorVideo.html">Doctor</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="login.html"><span class="glyphicon glyphicon-user"></span>Sign In</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="admin.html">Admin</a></li>
+            <li><a href="doctorView.html">Doctor</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->  
+</nav>
+</div>
+<div id="content">
+<div class="container">
+	<div class="jumbotron" id="admin-back" align="center">
+		
+		<a href="signup.html" role="button" class="btn btn-primary" id="register">Register</a>
+		<a href="updateprofile.html" role="button" class="btn btn-primary" id="updateprofile">Update Profile</a>
+		<a href="resetpass.html" role="button" class="btn btn-primary" id="resetpass">Reset Password</a>
+	</div>
+</div>
+</div>
+<div id="footer"> 	
+	<div class="container">
+		<p class="">Hi-Tech Hospital 2015</p>
+	</div>
+</div>
 </div>
 </body>
 </html>
