--- a/index.html
+++ b/index.html
@@ -1,62 +1,200 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>AdminPanel</title>
-
-	<script type="text/javascript" src="jquery.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>	
-	<script type="text/javascript" src="script.js"></script>	
+	<title>Hi-Tech Hospital</title>
 	
+	<script type="text/javascript" src="jquery-1.9.1.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
+
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-	<link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css">
-	<link rel="stylesheet" href="footer.css" type="text/css">
+	<link rel="stylesheet" href="css/flat-ui.min.css" type="text/css">
+	<link rel="stylesheet" href="css/flat-ui.css" type="text/css">
 	<link rel="stylesheet" href="style.css" type="text/css">
-	
-
+	<!--<link rel="stylesheet" href="Flat-UI-master/dist/css/flat-ui.min.css" type="text/css">-->
 	
 </head>
-
+	
 <body>
+<!--<div id="header"></div>-->
+<div class="wrapper">
+<div id="header">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="index.html" style="color:#5c6bc0;">Hi-Tech Hospital</a>
+	
+	<!-- for small display -->
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Hi-Tech Hospital</a>
     </div>
-    <div>
-    <ul class="nav navbar-nav navbar-left">
-        <li><a href="DoctorViewVideo.html" id="doctorView" onClick="pageChange(this.id)" style="color:#5c6bc0"><span class="glyphicon glyphicon-user"></span>Doctor</a></li>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">About</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="admin.html">Admin</a></li>
+            <li><a href="doctorVideo.html">Doctor</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
       </ul>
-    </div>
-    <div>
+      
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="signup.html" id="register" onClick="pageChange(this.id)" style="color:#5c6bc0"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="admin.html" style="color:#5c6bc0"><span class="glyphicon glyphicon-log-in"></span> Admin</a></li>
-        <li><a href="login.html" style="color:#5c6bc0"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="login.html"><span class="glyphicon glyphicon-user"></span>Sign In</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="admin.html">Admin</a></li>
+            <li><a href="doctorView.html">Doctor</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
       </ul>
-    </div>
-  </div>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->  
 </nav>
 
-<div class="container" align="center" id="reset">
-		<div class="jumbotron" align="center">
-			
-		</div>
-		<div class="row">
-		<div class="col-sm-4"></div>
-		<div class="col-sm-4"></div>
-		</div>
-		<div class="row">
-		<div class="col-sm-4"></div>
-		<div class="col-sm-4"></div>	
-		</div>
-
-			
 </div>
+<div id="content">
+<div class="container col-sm-1"></div>
+<div class="row" style="height:400px;">
+<div class="container col-sm-10">
+	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
 
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item" align="center">
+      <img src="img/opt.jpg" alt="operation Theater">
+      <div class="carousel-caption">
+        <p>Equiped with latest technologies.</p>
+      </div>
+    </div>
+    <div class="item active" align="center">
+      <img src="img/Doctors-Nurses1-1024x680.jpg" alt="Experts 24 x 7" height="100">
+      <div class="carousel-caption">
+        <p>Experts available 24 x 7.</p>
+      </div>
+    </div>
+     <div class="item" align="center">
+      <img src="img/DoctorPatient.jpg" height="100" alt="doctorPatient">
+      <div class="carousel-caption">
+        <p>Caring for your loved ones</p>
+      </div>
+    </div>
+  </div>
 
-<div class="foot">
-	<p id="bottom">Hi-Tech Hospital 2015</p>	
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
+</div>
+</div>
+<div class="container col-sm-1"></div>
+</div>
+<!--
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
 
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+				<h4 class="modal-title" id="myModalLabel">Log in</h4>
+			</div> <!-- /.modal-header 
+
+			<div class="modal-body">
+				<form role="form">
+					<div class="form-group">
+						<div class="input-group">
+							<input type="text" class="form-control" id="uLogin" placeholder="Login">
+							<label for="uLogin" class="input-group-addon glyphicon glyphicon-user"></label>
+						</div>
+					</div> <!-- /.form-group 
+
+					<div class="form-group">
+						<div class="input-group">
+							<input type="password" class="form-control" id="uPassword" placeholder="Password">
+							<label for="uPassword" class="input-group-addon glyphicon glyphicon-lock"></label>
+						</div> <!-- /.input-group 
+					</div> <!-- /.form-group 
+
+					<div class="checkbox">
+						<label>
+							<input type="checkbox"> Remember me
+						</label>
+					</div> <!-- /.checkbox 
+				</form>
+
+			</div> <!-- /.modal-body 
+
+			<div class="modal-footer">
+				<button class="form-control btn btn-primary">Ok</button>
+				<a href="#"  class="form-control btn btn-sm btn-primary" data-toggle="modal" data-target=".forget-modal">Forgot Password</a>
+				<div class="progress">
+					<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="1" aria-valuemin="1" aria-valuemax="100" style="width: 0%;">
+						<span class="sr-only">progress</span>
+					</div>
+				</div>
+			</div> <!-- /.modal-footer 
+
+		</div><!-- /.modal-content 
+	</div><!-- /.modal-dialog 
+</div><!-- /.modal 
+
+<div class="modal fade forget-modal" tabindex="-1" role="dialog" aria-labelledby="myForgetModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-sm">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">
+					<span aria-hidden="true">×</span>
+					<span class="sr-only">Close</span>
+				</button>
+				<h4 class="modal-title">Recovery password</h4>
+			</div>
+			<div class="modal-body">
+				<p>Type your email account</p>
+				<input type="email" name="recovery-email" id="recovery-email" class="form-control" autocomplete="off">
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+				<button type="button" class="btn btn-custom">Recovery</button>
+			</div>
+		</div> <!-- /.modal-content 
+	</div> <!-- /.modal-dialog 
+</div> <!-- /.modal -->
+
+<div id="footer">
+	<div class="container">
+		<p class="">Hi-Tech Hospital 2015</p>
+	</div>
+</div>
+</div>	
 </body>
 </html>
