--- a/login.html
+++ b/login.html
@@ -1,56 +1,150 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TestLogIn</title>
+	<title>Hi-Tech Hospital</title>
+	
+	<script type="text/javascript" src="jquery-1.9.1.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 
-	<script type="text/javascript" src="jquery.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>	
-	<script type="text/javascript" src="script.js"></script>	
-<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-<link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css">
-<link rel="stylesheet" href="footer.css" type="text/css">
-<link rel="stylesheet" href="style.css" type="text/css">
-
+	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+	<link rel="stylesheet" href="css/flat-ui.min.css" type="text/css">
+	<link rel="stylesheet" href="css/flat-ui.css" type="text/css">
+	<link rel="stylesheet" href="style.css" type="text/css">
+	<!--<link rel="stylesheet" href="Flat-UI-master/dist/css/flat-ui.min.css" type="text/css">-->
+	
 </head>
+	
 <body>
+<div class="wrapper">
+<div class="header">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="index.html" style="color:#5c6bc0;">Hi-Tech Hospital</a>
-    </div>
-    <div>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" id="register" onClick="pageChange(this.id)" style="color:#5c6bc0"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        
-      </ul>
-    </div>
-  </div>
-</nav>
 	
-	<div class="container"  id="login" align="center">
-		<div class="jumbotron" id="login" align="center">
-		<form role="form">
-			<div class="form-group">
-				User Name:<br>
-				<input type="text" name="userName" id="userName" value="Mouse">
-			</div>
-			<div class="form-group">
-				Password:<br>
-				<input type="password" name="psw" id="psw" value="">
-			</div>
-			<div><button type="submint" class="btn btn-success" value="submit">Login</button></div>
-		</form>	
-		<hr>
-		<p>Forgot Password <a href="forgot.html">forgot Password?</a></p>
-		</div>	
-	</div>
-<div class="row" id="foot">
-<div class="col-sm-12">
-	<div class="foot">
-		<p id="bottom">Hi-Tech Hospital 2015</p>	
-	</div>
-</div>
-</div>
+	<!-- for small display -->
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Hi-Tech Hospital</a>
+    </div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">About</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="admin.html">Admin</a></li>
+            <li><a href="doctorVideo.html">Doctor</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="login.html"><span class="glyphicon glyphicon-user"></span>Sign In</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="admin.html">Admin</a></li>
+            <li><a href="doctorView.html">Doctor</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->  
+</nav>
+</div>
+<div class="content">
+<section id="login">
+    <div class="container">
+    	<div class="row">
+    	    <div class="col-xs-12" id="box">
+        	    <div class="form-wrap">
+                <h1>Log in with your User ID</h1>
+                    <form role="form" action="javascript:;" method="post" id="login-form" autocomplete="off">
+                        <div class="form-group">
+                            <label for="uid" class="sr-only">User ID</label>
+                            <input type="text" name="uid" id="uid" class="form-control" placeholder="User ID" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="key" class="sr-only">Password</label>
+                            <input type="password" name="key" id="key" class="form-control" placeholder="Password" required>
+                        </div>
+                        <div class="checkbox">
+                            <span class="character-checkbox"  onclick="showPassword()"></span>
+                            <span class="label">Show password</span>
+                        </div>
+                        <input type="submit" id="btn-login" class="btn btn-custom btn-lg btn-block" value="Log in">
+                    </form>
+                    <a href="javascript:;" class="forget" data-toggle="modal" data-target=".forget-modal">Forgot your password?</a>
+                    <hr>
+        	    </div>
+    		</div> <!-- /.col-xs-12 -->
+    	</div> <!-- /.row -->
+    </div> <!-- /.container -->
+</section>
+
+<div class="modal fade forget-modal" tabindex="-1" role="dialog" aria-labelledby="myForgetModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">
+					<span aria-hidden="true">×</span>
+					<span class="sr-only">Close</span>
+				</button>
+				<h4 class="modal-title">Recovery password</h4>
+			</div>
+			<div class="modal-body">
+				<div class="form">
+                    <form role="form" action="javascript:;" method="post" id="login-form" autocomplete="off">
+                        <div class="form-group">
+                            <label for="uid" class="sr-only">User ID</label>
+                            <input type="text" name="uid" id="uid" class="form-control" placeholder="User ID" required>
+                        </div>
+								<div class="form-group">	
+									<select class="form-control input-sm" id="squestion">
+										<option value="q1">Your childhood name ?</option>
+										<option value="MedicalOfficer">Born(city)</option>
+										<option value="Nurse">Nurse</option>
+										<option value="Receptionist">Receptionist</option>
+									</select>
+								</div>
+								<div class="form-group">
+									<input type="text" class="form-control input-sm" id="sqans" placeholder="Answer goes here"></input>
+								</div>
+							</form>         
+        	    </div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+				<button type="button" class="btn btn-custom">Recovery</button>
+			</div>
+		</div> <!-- /.modal-content -->
+	</div> <!-- /.modal-dialog -->
+</div> <!-- /.modal -->
+</div>
+<div id="footer">
+
+	<div class="container">
+		<p class="">Hi-Tech Hospital 2015</p>
+	</div>
+
+</div>
+</div>
 </body>
 </html>
